# love-story-web

./: .gitignore  Cargo.toml  README.md  application.toml
database/: data.sql
src/: main.rs
src/api/: auth.rs  mod.rs  users.rs
src/config/: database.rs  mod.rs  server.rs
src/dto/: auth.rs
src/entities/: mod.rs  prelude.rs  users.rs
src/handler/: auth.rs  index.rs  mod.rs  users.rs
src/server/: app.rs  mod.rs  server.rs
src/utils/: database.rs  logger.rs  mod.rs
static/: 404.html
templates/: 404.html  auth.html  base.html  index.html
