[package]
name = "love-story-web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = {version = "0.8.4", features = ["macros"]}
tokio = {version = "1.47.1", features = ["full"]}
tracing = {version = "0.1.41", features = ["async-await"]}
tracing-subscriber = {version = "0.3.19", features = ["tracing", "env-filter", "chrono"]}
config = {version = "0.15", features = ["toml"]}
serde = {version = "1.0.219", features = ["derive"]}
sea-orm = {version = "2.0.0-rc.3", features = ["with-chrono", "runtime-tokio", "sqlx-postgres"]}