[package]
name = "love-story-web"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
axum = {version = "0.8.4", features = ["macros"]}
tokio = {version = "1.47.1", features = ["full"]}
tracing = {version = "0.1.41", features = ["async-await"]}
tracing-subscriber = {version = "0.3.19", features = ["tracing", "env-filter", "chrono"]}
config = {version = "0.15", features = ["toml"]}
serde = {version = "1.0.219", features = ["derive"]}
sea-orm = {version = "1.1.11", features = ["with-chrono", "runtime-tokio", "sqlx-postgres"]}
num_cpus = "1.17.0"
askama = {version = "0.14.0", features = ["derive"]}
tower-http = {version = "0.6.6", features = ["fs"]}
toml = "0.9.5"
uuid = { version = "1.18.0", features = ["v4"] }
bcrypt = "0.17.1"